--- a/01-intro/09-pandas.ipynb
+++ b/01-intro/09-pandas.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b1a23fb2",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "114c8ddb",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c25c6c9d",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "abe4d2e4",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "4        Pickup  32340  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "f104d442",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "2d89579e",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "4        Pickup  32340  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "097f69d9",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "1         Sedan  27150  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "7299a212",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
      "evalue": "invalid syntax (1897567212.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdf.Engine HP\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_580/1897567212.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df.Engine HP\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "54898f9d",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "Name: Engine HP, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "acc40580",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
        "4   Nissan  Frontier  32340"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "9c699894",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "70ec4449",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "ff30947e",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
        "4        Pickup  32340  50  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "064e3e7c",
    "metadata": {},
    "outputs": [],
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "5206c3ba",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "4        Pickup  32340  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "69e9bfbd",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "RangeIndex(start=0, stop=5, step=1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "d7e06c93",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "RangeIndex(start=0, stop=5, step=1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "14213eb4",
    "metadata": {},
    "outputs": [],
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "d9074134",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "e        Pickup  32340  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "a1c57024",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1158,7 @@
        "e        Pickup  32340  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "764c2aad",
    "metadata": {},
    "outputs": [],
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "f338e70b",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1290,7 @@
        "4        Pickup  32340  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "id": "318183a8",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1340,7 @@
        "Name: Engine HP, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "id": "ae5d726d",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
        "Name: Year, dtype: bool"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "73699361",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1457,7 @@
        "4        Pickup  32340  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "id": "0f29ed0f",
    "metadata": {},
    "outputs": [
@@ -1529,7 +1529,7 @@
        "4        Pickup  32340  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "id": "7deaf57a",
    "metadata": {},
    "outputs": [
@@ -1560,7 +1560,7 @@
        "'machine_learning_zoomcamp'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "id": "9ffa16ea",
    "metadata": {},
    "outputs": [
@@ -1586,7 +1586,7 @@
        "Name: Vehicle_Style, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "id": "835c3a40",
    "metadata": {},
    "outputs": [],
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "id": "5ee197dc",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1718,7 @@
        "4        pickup  32340  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "id": "0e6bb68a",
    "metadata": {},
    "outputs": [
@@ -1841,7 +1841,7 @@
        "max    2017.00     261.00              6.00  54990.00"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "id": "ca689f7b",
    "metadata": {},
    "outputs": [
@@ -1870,7 +1870,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "id": "05000331",
    "metadata": {},
    "outputs": [
@@ -1907,7 +1907,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "id": "6310552b",
    "metadata": {},
    "outputs": [
@@ -1955,7 +1955,7 @@
        "Name: MSRP, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 93,
    "id": "749f764c",
    "metadata": {},
    "outputs": [
@@ -1984,7 +1984,7 @@
        "array([ 2000, 27150, 54990, 34450, 32340])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "id": "1ff56c15",
    "metadata": {},
    "outputs": [
@@ -2044,7 +2044,7 @@
        "  'MSRP': 32340}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
